--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@alantoa/lightbox": "^0.2.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-lightbox": "^0.8.1"
   },
   "devDependencies": {
